--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -42,9 +42,10 @@ jobs:
       build_type: pull-request
       package-name: ucx_py
       package-dir: .
-      cibw-before-build: 'cp {package}/.github/build-scripts/patch-wheel.sh /patch-wheel.sh && sed -i ''s/name = "ucx-py"/name = "ucx-py-cu11"/g''  {package}/pyproject.toml'
+      cibw-before-build: 'cp {package}/.github/build-scripts/patch-wheel.sh /patch-wheel.sh'
       post-repair-amd64: "/patch-wheel.sh {dest_dir}/*.whl"
       post-repair-arm64: "/patch-wheel.sh {dest_dir}/*.whl"
+      uses-setup-env-vars: false
   wheel-tests:
     needs: wheel-build
     secrets: inherit
