--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,14 +18,11 @@ requires = [
     "setuptools>=64.0.0",
     "cython>=0.29,<0.30",
     "tomli; python_version < '3.11'",
-    "versioneer>=0.24",
 ]
 
 [project]
 name = "ucx-py"
-dynamic = [
-    "version",
-]
+version = "0.31.0"
 description = "Python Bindings for the Unified Communication X library (UCX)"
 readme = { file = "README.md", content-type = "text/markdown" }
 authors = [
@@ -115,11 +112,3 @@ zip-safe = false
 
 [tool.setuptools.packages.find]
 exclude=["tests*"]
-
-[tool.versioneer]
-VCS = "git"
-style = "pep440"
-versionfile_source = "ucp/_version.py"
-versionfile_build = "ucp/_version.py"
-tag_prefix = "v"
-parentdir_prefix = "ucp-"
