--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,9 +15,9 @@
 [build-system]
 build-backend = "setuptools.build_meta"
 requires = [
-    "setuptools>=64.0.0",
-    "cython>=0.29,<0.30",
-    "tomli; python_version < '3.11'",
+    "setuptools >=64.0.0",
+    "cython >=0.29.14,<0.30.0a0",
+    "tomli",                       # Unneeded for Python 3.11+
 ]
 
 [project]
@@ -32,7 +32,7 @@ license = { text = "BSD-3-Clause" }
 requires-python = ">=3.6"
 dependencies = [
     "numpy",
-    "pynvml",
+    "pynvml >=11.4.1",
 ]
 classifiers = [
     "Intended Audience :: Developers",
@@ -58,6 +58,8 @@ test = [
 
 [project.urls]
 Homepage = "https://github.com/rapidsai/ucx-py"
+Documentation = "https://ucx-py.readthedocs.io/en/stable/"
+Source = "https://github.com/rapidsai/ucx-py"
 
 [tool.isort]
 line_length = 79
