Try passing the absolute path

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -42,8 +42,8 @@ jobs:
       build_type: pull-request
       package-name: ucx_py
       package-dir: .
-      post-repair-amd64: "${GITHUB_WORKSPACE}/.github/build-scripts/patch-wheel.sh ucx_py*manylinux*.whl"
-      post-repair-arm64: "${GITHUB_WORKSPACE}/.github/build-scripts/patch-wheel.sh ucx_py*manylinux*.whl"
+      post-repair-amd64: "${GITHUB_WORKSPACE}/.github/build-scripts/patch-wheel.sh $(realpath ucx_py*manylinux*.whl)"
+      post-repair-arm64: "${GITHUB_WORKSPACE}/.github/build-scripts/patch-wheel.sh $(realpath ucx_py*manylinux*.whl)"
   wheel-tests:
     needs: wheel-build
     secrets: inherit
