--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -12,30 +12,30 @@ concurrency:
 jobs:
   pr-builder:
     needs:
-      #- checks
-      #- conda-python-build
-      #- conda-python-tests
+      - checks
+      - conda-python-build
+      - conda-python-tests
       - wheel-build
       - wheel-tests
     secrets: inherit
     uses: rapidsai/shared-action-workflows/.github/workflows/pr-builder.yaml@branch-23.06
-  #checks:
-  #  secrets: inherit
-  #  uses: rapidsai/shared-action-workflows/.github/workflows/checks.yaml@branch-23.06
-  #conda-python-build:
-  #  needs: checks
-  #  secrets: inherit
-  #  uses: rapidsai/shared-action-workflows/.github/workflows/conda-python-build.yaml@branch-23.06
-  #  with:
-  #    build_type: pull-request
-  #conda-python-tests:
-  #  needs: conda-python-build
-  #  secrets: inherit
-  #  uses: rapidsai/shared-action-workflows/.github/workflows/conda-python-tests.yaml@branch-23.06
-  #  with:
-  #    build_type: pull-request
+  checks:
+    secrets: inherit
+    uses: rapidsai/shared-action-workflows/.github/workflows/checks.yaml@branch-23.06
+  conda-python-build:
+    needs: checks
+    secrets: inherit
+    uses: rapidsai/shared-action-workflows/.github/workflows/conda-python-build.yaml@branch-23.06
+    with:
+      build_type: pull-request
+  conda-python-tests:
+    needs: conda-python-build
+    secrets: inherit
+    uses: rapidsai/shared-action-workflows/.github/workflows/conda-python-tests.yaml@branch-23.06
+    with:
+      build_type: pull-request
   wheel-build:
-    #needs: checks
+    needs: checks
     secrets: inherit
     uses: rapidsai/shared-action-workflows/.github/workflows/wheels-manylinux-build.yml@manylinux_v2
     with:
