Require Numba 0.57.0+ & NumPy 1.21.0+
Align with the rest of RAPIDS on these requirements. Also needed for
CUDA 12 support.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ authors = [
 license = { text = "BSD-3-Clause" }
 requires-python = ">=3.9"
 dependencies = [
-    "numpy",
+    "numpy >=1.21",
     "pynvml >=11.4.1",
 ]
 classifiers = [
