--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -68,7 +68,7 @@ dependencies:
     common:
       - output_types: [conda, requirements]
         packages:
-          - numpy
+          - numpy>=1.21
           - ucx
   test_python:
     common:
@@ -76,6 +76,6 @@ dependencies:
         packages:
           - cudf=23.06
           - cupy
-          - numba
+          - numba>=0.57
           - pytest
           - pytest-asyncio
