Use rapids-dependency-file-generator for pyproject.toml.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,5 +23,10 @@ repos:
                 name: flake8-cython
                 args: ["--config=.flake8.cython"]
                 types: [cython]
+      - repo: https://github.com/rapidsai/dependency-file-generator
+        rev: v1.5.2
+        hooks:
+              - id: rapids-dependency-file-generator
+                args: ["--clean"]
 default_language_version:
       python: python3
