--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -108,7 +108,7 @@ dependencies:
       - output_types: [conda, requirements, pyproject]
         packages:
           - cloudpickle
-          - cudf==23.06
+          - cudf==23.6.*
           - dask
           - distributed
           - numba>=0.57
