--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ classifiers = [
 [project.optional-dependencies]
 test = [
     "cloudpickle",
-    "cudf==23.06",
+    "cudf==23.6.*",
     "cupy-cuda11x>=12.0.0",
     "dask",
     "distributed",
