--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -113,6 +113,7 @@ dependencies:
           - numba>=0.57
           - pytest
           - pytest-asyncio
+          - pytest-rerunfailures
       - output_types: [conda]
         packages:
           - cupy>=12.0.0
