Replace `cudatoolkit` with `cuda-python` in `meta.yaml`

--- a/conda/recipes/ucx-py/meta.yaml
+++ b/conda/recipes/ucx-py/meta.yaml
@@ -39,7 +39,7 @@ requirements:
 
 test:
   requires:
-    - cudatoolkit {{ cuda_version }}.*
+    - cuda-version {{ cuda_version }}.*
   imports:
     - ucp
 
