--- a/conda/recipes/ucx-py/meta.yaml
+++ b/conda/recipes/ucx-py/meta.yaml
@@ -39,7 +39,7 @@ requirements:
 
 test:
   requires:
-    - cuda-version {{ cuda_version }}.*
+    - cuda-version ={{ cuda_version }}
   imports:
     - ucp
 
