--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -51,6 +51,8 @@ jobs:
       branch: ${{ inputs.branch }}
       sha: ${{ inputs.sha }}
       date: ${{ inputs.date }}
+      package-name: ucx_py
+      package-dir: .
       script: ci/build_wheel.sh
   wheel-publish:
     needs: wheel-build
@@ -61,4 +63,5 @@ jobs:
       branch: ${{ inputs.branch }}
       sha: ${{ inputs.sha }}
       date: ${{ inputs.date }}
+      package-name: ucx_py
       script: ci/test_wheel.sh
