--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -61,4 +61,5 @@ jobs:
       branch: ${{ inputs.branch }}
       sha: ${{ inputs.sha }}
       date: ${{ inputs.date }}
+      package-name: ucx_py
       script: ci/test_wheel.sh
