--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,12 +1,11 @@
 version: 2
 
 build:
-  image: latest
-  apt_packages:
-    - libnuma1
+  os: "ubuntu-22.04"
+  tools:
+    python: "mambaforge-22.9"
 
 python:
-  version: 3.8
   install:
     - method: pip
       path: .
