Ignore UCX run exports and allow `ucx>=1.14.1,<1.16.0`

--- a/conda/recipes/ucx-py/meta.yaml
+++ b/conda/recipes/ucx-py/meta.yaml
@@ -24,6 +24,8 @@ requirements:
   build:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
+    ignore_run_exports_from:
+      - ucx
   host:
     - python
     - pip
@@ -33,6 +35,7 @@ requirements:
     {% endfor %}
   run:
     - python
+    - ucx >=1.14.1,<1.16.0
     {% for r in data.get("project", {}).get("dependencies", []) %}
     - {{ r }}
     {% endfor %}
