Ignore UCX run exports and allow `ucx>=1.14.1,<1.16.0` (#1003)
Authors:
  - Peter Andreas Entschev (https://github.com/pentschev)

Approvers:
  - Vyas Ramasubramani (https://github.com/vyasr)
  - Ray Douglass (https://github.com/raydouglass)

URL: https://github.com/rapidsai/ucx-py/pull/1003

--- a/conda/recipes/ucx-py/meta.yaml
+++ b/conda/recipes/ucx-py/meta.yaml
@@ -19,6 +19,8 @@ build:
   string: py{{ py_version }}_{{ date_string }}_{{ GIT_DESCRIBE_HASH }}_{{ GIT_DESCRIBE_NUMBER }}
   script:
     - {{ PYTHON }} -m pip install . -vv
+  ignore_run_exports_from:
+    - ucx
 
 requirements:
   build:
@@ -33,6 +35,7 @@ requirements:
     {% endfor %}
   run:
     - python
+    - ucx >=1.14.1,<1.16.0
     {% for r in data.get("project", {}).get("dependencies", []) %}
     - {{ r }}
     {% endfor %}
