Update versioning strategy (#997)
See https://github.com/rapidsai/rmm/pull/1347

Authors:
  - Vyas Ramasubramani (https://github.com/vyasr)
  - Peter Andreas Entschev (https://github.com/pentschev)
  - https://github.com/jakirkham

Approvers:
  - Peter Andreas Entschev (https://github.com/pentschev)
  - Lawrence Mitchell (https://github.com/wence-)
  - AJ Schmidt (https://github.com/ajschmidt8)

URL: https://github.com/rapidsai/ucx-py/pull/997

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ requires = [
 
 [project]
 name = "ucx-py"
-version = "0.35.0"
+dynamic = ["version"]
 description = "Python Bindings for the Unified Communication X library (UCX)"
 readme = { file = "README.md", content-type = "text/markdown" }
 authors = [
@@ -117,3 +117,6 @@ zip-safe = false
 
 [tool.setuptools.packages.find]
 exclude=["tests*"]
+
+[tool.setuptools.dynamic]
+version = {file = "ucp/VERSION"}
