--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -120,7 +120,7 @@ dependencies:
           - dask
           - distributed
           - numba>=0.57
-          - pytest
+          - pytest==7.*
           - pytest-asyncio
           - pytest-rerunfailures
       - output_types: [conda]
