--- a/pyproject.toml
+++ b/pyproject.toml
@@ -116,7 +116,7 @@ license-files = ["LICENSE"]
 zip-safe = false
 
 [tool.setuptools.packages.find]
-exclude=["tests*"]
+exclude=["*tests*"]
 
 [tool.setuptools.dynamic]
 version = {file = "ucp/VERSION"}
