--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -34,6 +34,7 @@ files:
       table: project
     includes:
       - run
+      - depends_on_ucx_run
   py_optional_test:
     output: pyproject
     pyproject_dir: .
@@ -116,9 +117,28 @@ dependencies:
         packages:
           - numpy>=1.23,<2.0a0
           - pynvml>=11.4.1
+  depends_on_ucx_run:
+    common:
       - output_types: conda
         packages:
           - ucx>=1.15.0,<1.16
+      - output_types: requirements
+        packages:
+          # pip recognizes the index as a global option for the requirements.txt file
+          - --extra-index-url=https://pypi.nvidia.com
+          - --extra-index-url=https://pypi.anaconda.org/rapidsai-wheels-nightly/simple
+    specific:
+      - output_types: [requirements, pyproject]
+        matrices:
+          - matrix: {cuda: "12.*"}
+            packages:
+              - libucx-cu12>=1.15.0,<1.16
+          - matrix: {cuda: "11.*"}
+            packages:
+              - libucx-cu11>=1.15.0,<1.16
+          - matrix: null
+            packages:
+              - libucx>=1.15.0,<1.16
   test_python:
     common:
       - output_types: [conda, requirements, pyproject]
