--- a/conda/recipes/ucx-py/meta.yaml
+++ b/conda/recipes/ucx-py/meta.yaml
@@ -30,7 +30,8 @@ requirements:
     - python
     - pip
     - ucx
-    {% for r in data.get("build-system", {}).get("requires", []) %}
+    # 'libucx' wheel dependency is unnecessary... the 'ucx' conda-forge package is used here instead
+    {% for r in data.get("build-system", {}).get("requires", []) if not r.startswith("libucx") %}
     - {{ r }}
     {% endfor %}
   run:
