--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -4,10 +4,9 @@ build:
   os: "ubuntu-22.04"
   tools:
     python: "mambaforge-22.9"
-  jobs:
-    pre_install:
-      - bash ci/build_docs_pre_install.sh
 
+# PIP_NO_DEPS="True" is set in the readthedocs build environment.
+# ref: https://docs.readthedocs.io/en/stable/guides/environment-variables.html
 python:
   install:
     - method: pip
