--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,7 +5,9 @@ build:
   tools:
     python: "mambaforge-22.9"
 
-# PIP_NO_DEPS="True" is set in the readthedocs build environment.
+# PIP_NO_DEPS="True" and PIP_NO_BUILD_ISOLATION="True" are set in the readthedocs build environment.
+# Al of the project's build dependencies need to be provided via the conda environment
+# at conda/environments/builddocs.yml.
 # ref: https://docs.readthedocs.io/en/stable/guides/environment-variables.html
 python:
   install:
