--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -158,9 +158,11 @@ dependencies:
           - matrix: {cuda: "11.*"}
             packages:
               - libucx-cu11>=1.15.0,<1.16
+          # NOTE: this fallback needs to be a real, suffixed version
+          #       so "pip install ." (e.g. as used in docs builds) will work
           - matrix: null
             packages:
-              - libucx>=1.15.0,<1.16
+              - libucx-cu11>=1.15.0,<1.16
   test_python:
     common:
       - output_types: [conda, requirements, pyproject]
