--- a/conda/environments/builddocs.yml
+++ b/conda/environments/builddocs.yml
@@ -14,5 +14,8 @@ dependencies:
 - recommonmark
 - pandoc=<2.0.0
 - pip
+- pip:
+  - --extra-index-url=https://pypi.anaconda.org/rapidsai-wheels-nightly/simple
+  - ../../
 - ucx
 - cython
