--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -140,7 +140,7 @@ dependencies:
           #       so 'pip install .' (e.g. as used in docs builds) will work
           - matrix: null
             packages:
-              - libucx-cu11==1.15.0
+              - libucx==1.15.0
   depends_on_ucx_run:
     common:
       - output_types: conda
@@ -164,7 +164,7 @@ dependencies:
           #       so "pip install ." (e.g. as used in docs builds) will work
           - matrix: null
             packages:
-              - libucx-cu11>=1.15.0,<1.16
+              - libucx>=1.15.0,<1.16
   test_python:
     common:
       - output_types: [conda, requirements, pyproject]
