--- a/conda/recipes/ucx-py/meta.yaml
+++ b/conda/recipes/ucx-py/meta.yaml
@@ -30,13 +30,15 @@ requirements:
     - python
     - pip
     - ucx
-    {% for r in data.get("build-system", {}).get("requires", []) %}
+    # 'libucx' wheel dependency is unnecessary... the 'ucx' conda-forge package is used here instead
+    {% for r in data.get("build-system", {}).get("requires", []) if not r.startswith("libucx") %}
     - {{ r }}
     {% endfor %}
   run:
     - python
     - ucx >=1.15.0,<1.16.0
-    {% for r in data.get("project", {}).get("dependencies", []) %}
+    # 'libucx' wheel dependency is unnecessary... the 'ucx' conda-forge package is used here instead
+    {% for r in data.get("project", {}).get("dependencies", []) if not r.startswith("libucx") %}
     - {{ r }}
     {% endfor %}
 
