--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -6,6 +6,7 @@ files:
       - checks
       - cuda
       - cuda_version
+      - rapids_build_setuptools
       - py_version
       - run
       - test_python
@@ -25,6 +26,14 @@ files:
     pyproject_dir: .
     extras:
       table: build-system
+    includes:
+      - rapids_build_setuptools
+  py_rapids_build:
+    output: pyproject
+    pyproject_dir: .
+    extras:
+      table: tool.rapids-build-backend
+      key: requires
     includes:
       - build_python
       - depends_on_ucx_build
@@ -109,8 +118,13 @@ dependencies:
     common:
       - output_types: [conda, requirements, pyproject]
         packages:
-          - setuptools>=64.0.0
           - cython>=3.0.0
+  rapids_build_setuptools:
+    common:
+      - output_types: [conda, requirements, pyproject]
+        packages:
+          - rapids-build-backend>=0.3.0,<0.4.0dev0
+          - setuptools>=64.0.0
   run:
     common:
       - output_types: [conda, requirements, pyproject]
@@ -132,15 +146,13 @@ dependencies:
         matrices:
           - matrix: {cuda: "12.*"}
             packages:
-              - libucx-cu12==1.15.0
+              - libucx-cu12==1.15.0,>=0.0.0a0
           - matrix: {cuda: "11.*"}
             packages:
-              - libucx-cu11==1.15.0
-          # NOTE: this fallback needs to be a real, suffixed version
-          #       so 'pip install .' (e.g. as used in docs builds) will work
+              - libucx-cu11==1.15.0,>=0.0.0a0
           - matrix: null
             packages:
-              - libucx==1.15.0
+              - libucx==1.15.0,>=0.0.0a0
   depends_on_ucx_run:
     common:
       - output_types: conda
@@ -156,21 +168,19 @@ dependencies:
         matrices:
           - matrix: {cuda: "12.*"}
             packages:
-              - libucx-cu12>=1.15.0,<1.16
+              - libucx-cu12>=1.15.0,<1.16,>=0.0.0a0
           - matrix: {cuda: "11.*"}
             packages:
-              - libucx-cu11>=1.15.0,<1.16
-          # NOTE: this fallback needs to be a real, suffixed version
-          #       so "pip install ." (e.g. as used in docs builds) will work
+              - libucx-cu11>=1.15.0,<1.16,>=0.0.0a0
           - matrix: null
             packages:
-              - libucx>=1.15.0,<1.16
+              - libucx>=1.15.0,<1.16,>=0.0.0a0
   test_python:
     common:
       - output_types: [conda, requirements, pyproject]
         packages:
           - cloudpickle
-          - cudf==24.8.*
+          - &cudf_conda cudf==24.8.*,>=0.0.0a0
           - dask
           - distributed
           - numba>=0.57
@@ -180,6 +190,18 @@ dependencies:
       - output_types: [conda]
         packages:
           - cupy>=12.0.0
+    specific:
       - output_types: [requirements, pyproject]
-        packages:
-          - cupy-cuda11x>=12.0.0
+        matrices:
+          - matrix: {cuda: "12.*"}
+            packages:
+              - cudf-cu12==24.8.*,>=0.0.0a0
+              - cupy-cuda12x>=12.0.0
+          - matrix: {cuda: "11.*"}
+            packages:
+              - cudf-cu11==24.8.*,>=0.0.0a0
+              - &cupy_cu11 cupy-cuda11x>=12.0.0
+          - matrix:
+            packages:
+              - *cudf_conda
+              - *cupy_cu11
