--- a/conda/recipes/ucx-py/meta.yaml
+++ b/conda/recipes/ucx-py/meta.yaml
@@ -29,17 +29,19 @@ requirements:
   host:
     - python
     - pip
-    - rapids-build-backend >=0.3.1,<0.4.0dev0
     - ucx
+    {% for b_r in data["build-system"]["requires"] %}
+    - {{ b_r }}
+    {% endfor %}
     # 'libucx' wheel dependency is unnecessary... the 'ucx' conda-forge package is used here instead
-    {% for r in data.get("build-system", {}).get("requires", []) if not r.startswith("libucx") %}
-    - {{ r }}
+    {% for rbb_r in data["tool.rapids-build-backend"]["requires"] if not r.startswith("libucx") %}
+    - {{ rbb_r }}
     {% endfor %}
   run:
     - python
     - ucx >=1.15.0,<1.16.0
     # 'libucx' wheel dependency is unnecessary... the 'ucx' conda-forge package is used here instead
-    {% for r in data.get("project", {}).get("dependencies", []) if not r.startswith("libucx") %}
+    {% for r in data["project"]["dependencies"] if not r.startswith("libucx") %}
     - {{ r }}
     {% endfor %}
 
