use rapids-build-backend (#1044)
Contributes to https://github.com/rapidsai/build-planning/issues/31
Contributes to https://github.com/rapidsai/dependency-file-generator/issues/89
Contributes to https://github.com/rapidsai/build-planning/issues/72

Proposes:

* introducing `rapids-build-backend` as this project's build backend, to reduce the complexity of various CI/build scripts
* making get-data-from-`pyproject.toml` code in conda recipe a bit stricter

## Notes for Reviewers

This reverts some of the workarounds introduced for docs builds in #1041. See this thread for context: https://github.com/rapidsai/ucx-py/pull/1041#discussion_r1592789721

~To do that, I set 2 environment variables manually in in the readthedocs console ([link](https://readthedocs.org/dashboard/ucx-py/edit/)):~

* ~`RAPIDS_DISABLE_CUDA=true` = used to prevent needing `nvcc` in the docs-building environment~
* ~`RAPIDS_MATRIX_ENTRY='cuda=12.2'` = used to ensure that `pip install .` tries to install a real package (e.g. `libucx-cu12`)~

~I think this is the first place we're using the `rapids-build-backend` environment variable support.~

see https://github.com/rapidsai/ucx-py/pull/1044#discussion_r1636690394

Authors:
  - James Lamb (https://github.com/jameslamb)

Approvers:
  - Bradley Dice (https://github.com/bdice)
  - Peter Andreas Entschev (https://github.com/pentschev)

URL: https://github.com/rapidsai/ucx-py/pull/1044

--- a/conda/recipes/ucx-py/meta.yaml
+++ b/conda/recipes/ucx-py/meta.yaml
@@ -18,7 +18,7 @@ build:
   number: {{ GIT_DESCRIBE_NUMBER }}
   string: py{{ py_version }}_{{ date_string }}_{{ GIT_DESCRIBE_HASH }}_{{ GIT_DESCRIBE_NUMBER }}
   script:
-    - {{ PYTHON }} -m pip install . -vv
+    - {{ PYTHON }} -m pip install --config-settings rapidsai.disable-cuda=true . -vv
   ignore_run_exports_from:
     - ucx
 
@@ -30,16 +30,19 @@ requirements:
     - python
     - pip
     - ucx
+    {% for build_req in data["build-system"]["requires"] %}
+    - {{ build_req }}
+    {% endfor %}
     # 'libucx' wheel dependency is unnecessary... the 'ucx' conda-forge package is used here instead
-    {% for r in data.get("build-system", {}).get("requires", []) if not r.startswith("libucx") %}
-    - {{ r }}
+    {% for rbb_req in data["tool"]["rapids-build-backend"]["requires"] if not rbb_req.startswith("libucx") %}
+    - {{ rbb_req }}
     {% endfor %}
   run:
     - python
     - ucx >=1.15.0,<1.16.0
     # 'libucx' wheel dependency is unnecessary... the 'ucx' conda-forge package is used here instead
-    {% for r in data.get("project", {}).get("dependencies", []) if not r.startswith("libucx") %}
-    - {{ r }}
+    {% for req in data["project"]["dependencies"] if not req.startswith("libucx") %}
+    - {{ req }}
     {% endfor %}
 
 test:
@@ -47,12 +50,12 @@ test:
     - ucp
 
 about:
-  home: {{ data.get("project", {}).get("urls", {}).get("Homepage", "") }}
-  license: {{ data.get("project", {}).get("license", {}).get("text", "") }}
+  home: {{ data["project"]["urls"]["Homepage"] }}
+  license: {{ data["project"]["license"]["text"] }}
   license_file:
-    {% for e in data.get("tool", {}).get("setuptools", {}).get("license-files", []) %}
+    {% for e in data["tool"]["setuptools"]["license-files"] %}
     - ../../../{{ e }}
     {% endfor %}
-  summary: {{ data.get("project", {}).get("description", "") }}
-  dev_url: {{ data.get("project", {}).get("urls", {}).get("Source", "") }}
-  doc_url: {{ data.get("project", {}).get("urls", {}).get("Documentation", "") }}
+  summary: {{ data["project"]["description"] }}
+  dev_url: {{ data["project"]["urls"]["Source"] }}
+  doc_url: {{ data["project"]["urls"]["Documentation"] }}
