--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,8 +5,13 @@ build:
   tools:
     python: "mambaforge-22.9"
   jobs:
-    post_checkout:
-      - bash ci/build_docs_pre_install.sh
+    post_create_environment:
+      - |
+        pip install \
+          --extra-index-url "https://pypi.anaconda.org/rapidsai-wheels-nightly/simple/" \
+          -C rapidsai.disable-cuda=true \
+          -C rapidsai.matrix-entry="cuda=12.2" \
+          .
 
 conda:
   environment: conda/environments/builddocs.yml
